# qn-agent

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
config/: agent.cfg  uphill_calibration1.json  uphill_calibration2.json  uphill_calibration3.json  uphill_calibration4.json
docker/: Dockerfile  conf_lbnl-bsm2.json  conf_lbnl-q.json  conf_lbnl-q2.json  conf_lbnl-switch.json  conf_ucb-q2.json
quantnet_agent/: cli.py
quantnet_agent/common/: __init__.py  calibration_status.py  config.py  constants.py  logging.py
quantnet_agent/hal/: HAL.py  hwclasses.py  local_task_manager.py  node.py
quantnet_agent/hal/driver/: OZoptics.py  Thorlabs.py  artiq.py  dummy.py  overlayepc.py  overlayexpframework.py  overlaylightsrc.py  overlaymeter.py  simulator.py
quantnet_agent/hal/interpreter/: calibration.py  calibration_interpreter.py  dummy_cavity_calibration.py  dummy_lsrc_calibration.py  exp_framework.py  scheduler.py
quantnet_agent/interpreter/: test_interpreter.py
quantnet_agent/scheduler/: scheduler.py
quantnet_agent/service/: __init__.py  agent.py  register.py
quantnet_agent/templates/: agent.cfg
tests/: __init__.py
